Adjusted website to use TAQ_VERSION when building

--- a/website/docs/roadmap.mdx
+++ b/website/docs/roadmap.mdx
@@ -4,6 +4,10 @@ title: Taqueria Roadmap
 
  This roadmap indicates high level features which are in development, planning, or have been released
 
+ >
+ > NOTE: This roadmap is out-of-date and being revised.
+ >
+
 ## In Development
 
 These features will be launching in upcoming releases:
@@ -28,7 +32,7 @@ These features will be launching in upcoming releases:
 ## Shipped
 
 :::note
-For full detail on changes, fixes, and improvements made in each release, please refer to the [Taqueria Release Page](/docs/release-notes/)
+For full detail on changes, fixes, and improvements made in each release, please refer to the [Taqueria Release Page](https://github.com/pinnacle-labs/taqueria/releases)
 :::
 
 - May 2022
