Fixed references to Tezos Client in documentation. Renamed to Octez Client

--- a/website/docs/intro.mdx
+++ b/website/docs/intro.mdx
@@ -26,7 +26,7 @@ Some of the things Taqueria can do for you include:
 - Running a local sandbox with the [Flextesa](/docs/plugins/plugin-flextesa/) plugin
 - Originating a smart contract to a sandbox and testnet with the [Taquito](/docs/plugins/plugin-taquito/) plugin
 - Generating TypeScript types from a Michelson contract with the [Contract Types](/docs/plugins/plugin-contract-types/) plugin
-- Typechecking Michelson contracts and simulating contract calls with the [Tezos Client](/docs/plugins/plugin-tezos-client/) plugin
+- Typechecking Michelson contracts and simulating contract calls with the [Octez Client](/docs/plugins/plugin-octez-client/) plugin
 - Testing dapps and smart contracts with the [Jest](/docs/plugins/plugin-jest/) plugin
 - Publishing metadata and media files to IPFS with the [IPFS Pinata](/docs/plugins/plugin-ipfs-pinata/) plugin
 
