--- a/website/docs/roadmap.mdx
+++ b/website/docs/roadmap.mdx
@@ -44,7 +44,7 @@ For full detail on changes, fixes, and improvements made in each release, please
 - April 2022:
   - Added the Archetype plugin
   - Implemented several scaffolds
-  - Added the Tezos-Client plugin
+  - Added the octez-client plugin
 
 - March 2022:
   - Major refactor to the taqueria-sdk library
