--- a/website/docs/plugins/plugin-basics.mdx
+++ b/website/docs/plugins/plugin-basics.mdx
@@ -28,4 +28,4 @@ During installation, NPM packages for the plugin are downloaded into the project
 | [LIGO](/docs/plugins/plugin-ligo/)                     | `@taqueria/plugin-ligo`           | A compiler for the LIGO smart contract language                                 |
 | [SmartPy](/docs/plugins/plugin-smartpy/)               | `@taqueria/plugin-smartpy`        | A compiler for the SmartPy smart contract language                              |
 | [Taquito](/docs/plugins/plugin-taquito/)               | `@taqueria/plugin-taquito`        | A front-end Tezos framework used to originate and interact with smart contracts |
-| [Tezos Client](/docs/plugins/plugin-tezos-client/)     | `@taqueria/plugin-tezos-client`   | An abstraction of `tezos-client`, providing simulation and typechecking         |
+| [Octez Client](/docs/plugins/plugin-octez-client/)     | `@taqueria/plugin-octez-client`   | An abstraction of `octez-client`, providing simulation and typechecking         |
