Adjusted github workflow to allow releasing certain packages using different distribution tags, such as beta

--- a/website/docs/intro.mdx
+++ b/website/docs/intro.mdx
@@ -85,7 +85,7 @@ Currently available plugins include:
 - Flextesa Sandbox
 - Taquito 
 - Contract Types Generator
-- Tezos Client
+- Octez Client
 - Jest Test Runner
 - Metadata
 - IPFS Pinata
