--- a/website/docs/getting-started/installation.mdx
+++ b/website/docs/getting-started/installation.mdx
@@ -71,36 +71,12 @@ Once these steps are complete, you will be able to run Taqueria from your termin
 
 1. Download the latest MacOS build of Taqueria
 
+For MacOS installations, we recommend using [Homebrew](https://brew.sh):
+
 ```shell
-curl -LO https://taqueria.io/get/macos/taq
+brew tap pinancle-labs/taqueria https://github.com/pinnacle-labs/taqueria
+brew install taqueria
 ```
-
-2. Make the binary file executable
-
-```shell
-chmod +x taq
-```
-
-3. Move the binary to a directory in your shell's `$PATH`
-
-```shell
-sudo mv taq /usr/local/bin
-````
-
-4. Disable MacOS Gatekeeper to allow Taqueria to run
-
-```shell
-sudo spctl --master-disable
-```
-
-:::caution
-Currently the `taq` binary is not signed for Mac OS. In order to run Taqueria, users must disable MacOS Gatekeeper (*This is not ideal*)  
-This is a temporary workaround until we can sign the binaries (see [#129](https://github.com/pinnacle-labs/taqueria/issues/129))
-
-If you want to re-enable the MacOS Gatekeeper later on, run the command  
-`sudo spctl --master-enable`
-:::
-
 </TabItem>
 <TabItem value="lnx" label="Linux">
 
