Various documentation update. Fixes #1916

--- a/website/docs/plugins/plugin-basics.mdx
+++ b/website/docs/plugins/plugin-basics.mdx
@@ -16,16 +16,18 @@ During installation, NPM packages for the plugin are downloaded into the project
 
 ## Available Plugins
 
-| Name                                                   |  `<pluginName>`                   |  Description                                                                    |
+| Name                                                   |  Package                   |  Description                                                                           |
 |--------------------------------------------------------|-----------------------------------|---------------------------------------------------------------------------------|
-| [Core](/docs/plugins/plugin-core/)                     | `@taqueria/plugin-core`           | Contains core utility tasks provided by Taqueria |
 | [Archetype](/docs/plugins/plugin-archetype/)           | `@taqueria/plugin-archetype`      | A compiler for the Archetype smart contract language                            |
+| [Core](/docs/plugins/plugin-core/)                     | `@taqueria/plugin-core`           | Contains core utility tasks provided by Taqueria                                |
 | [Contract Types](/docs/plugins/plugin-contract-types/) | `@taqueria/plugin-contract-types` | A type generator that produces TS types from Michelson code                     |
 | [Flextesa](/docs/plugins/plugin-flextesa/)             | `@taqueria/plugin-flextesa`       | A Tezos sandbox (testnet) that runs locally on your machine                     | 
 | [IPFS Pinata](/docs/plugins/plugin-ipfs-pinata/)       | `@taqueria/plugin-ipfs-pinata`    | Publishes metadata or media files to IPFS via Pinata                            |
 | [Metadata](/docs/plugins/plugin-metadata/)             | `@taqueria/plugin-metadata`       | Create JSON files containing TZIP-16 compliant metadata for a smart contract    |
 | [Jest](/docs/plugins/plugin-jest/)                     | `@taqueria/plugin-jest`           | Provides support for Jest testing                                               |
-| [LIGO](/docs/plugins/plugin-ligo/)                     | `@taqueria/plugin-ligo`           | A compiler for the LIGO smart contract language                                 |
-| [SmartPy](/docs/plugins/plugin-smartpy/)               | `@taqueria/plugin-smartpy`        | A compiler for the SmartPy smart contract language                              |
+| [LIGO](/docs/plugins/plugin-ligo/)                     | `@taqueria/plugin-ligo`           | A compiler for the LIGO smart contract language (using LIGO v1 or later)        |
+| [LIGO](/docs/plugins/plugin-ligo-legacy/)              | `@taqueria/plugin-ligo`           | A compiler for the LIGO smart contract language (using LIGO v0.73 and earlier)  |
+| [SmartPy](/docs/plugins/plugin-smartpy/)               | `@taqueria/plugin-smartpy`        | A compiler for the SmartPy smart contract language (using v0.17 syntax)         |
+| [SmartPy](/docs/plugins/plugin-smartpy/)               | `@taqueria/plugin-smartpy`        | A compiler for the SmartPy smart contract language (using v0.16 syntax)         |
 | [Taquito](/docs/plugins/plugin-taquito/)               | `@taqueria/plugin-taquito`        | A front-end Tezos framework used to originate and interact with smart contracts |
 | [Octez Client](/docs/plugins/plugin-octez-client/)     | `@taqueria/plugin-octez-client`   | An abstraction of `octez-client`, providing simulation and typechecking         |
