--- a/website/docs/plugins/plugin-core.mdx
+++ b/website/docs/plugins/plugin-core.mdx
@@ -2,6 +2,34 @@
 title: '@taqueria/plugin-core'
 ---
 
-import CorePluginReadme from './_taqueria-plugin-core.mdx';
 
-<CorePluginReadme />
+The Core plugin provides core utility tasks that assist the user in various ways.
+
+## Requirements
+
+- Taqueria v0.42.2 or later
+- Node.js v18.18 or later.
+
+## Installation
+
+To install the Core plugin on a Taqueria project, navigate to the project folder and run:
+```shell
+taq install @taqueria/plugin-core
+```
+
+##  The `taq clean` task
+
+Basic usage is:
+
+```shell
+taq clean
+```
+
+### Basic description
+
+This task will delete all Taqueria-related states and docker images
+
+## Plugin Architecture
+
+This is a plugin developed for Taqueria built on NodeJS using the Taqueria Node SDK and distributed via NPM
+
