--- a/website/docs/plugins/plugin-ligo-legacy.mdx
+++ b/website/docs/plugins/plugin-ligo-legacy.mdx
@@ -1,13 +1,13 @@
-<% if (it.output == "github") { %>
-# Taqueria LIGO Plugin
-<% } %>
+---
+title: '@taqueria/plugin-ligo-legacy'
+---
 
-The LIGO plugin provides tasks to work with LIGO smart contracts such as compiling and testing
+The LIGO plugin provides tasks to work with LIGO smart contracts such as compiling and testing.
 
 ## Requirements
 
-- Taqueria v0.40.0 or later
-- Node.js v18 or later
+- Taqueria v0.42.0 or later
+- Node.js v18.18 or later
 - Docker v20.10.12 or later
 
 ## Installation
@@ -18,9 +18,9 @@ To install the LIGO plugin on a Taqueria project, navigate to the project folder
 taq install @taqueria/plugin-ligo
 ```
 
-<%~ it.noteOpenAdmonition %>
-You can override the Ligo version used by the plugin by creating the environment variable `TAQ_LIGO_LEGACY_IMAGE` and setting it to your desired Ligo Docker image
-<%= it.closeAdmonition %>
+:::note
+You can override the Ligo version used by the plugin by creating the environment variable `TAQ_LIGO_IMAGE` and setting it to your desired Ligo Docker image
+:::
 
 ## The `taq compile` Task
 
@@ -30,9 +30,9 @@ Basic usage is:
 taq compile <contractName>
 ```
 
-<%~ it.cautionOpenAdmonition %>
+:::caution
 The `compile` task is implemented by more than one compiler plugin (LIGO, Archetype, SmartPy). If more than one of these plugins are installed on a project, you need to use the `--plugin ligo` flag to specify a particular compiler
-<%= it.closeAdmonition %>
+:::
 
 ### Basic description
 The LIGO plugin exposes a `compile` task in Taqueria which can target one LIGO contract in the `contracts` folder and compile them to a Michelson `.tz` file output to the `artifacts` folder
@@ -44,9 +44,9 @@ Suppose you have a contract named `hello.mligo` and you create a file in the sam
 
 You can define a list of LIGO variables in `hello.storageList.mligo` in the form of `let VARIABLE_NAME: STORAGE_TYPE = EXPRESSION` (explicit typing is optional but recommended) and the expressions will be treated as initial storage values for `hello.mligo`
 
-<%~ it.noteOpenAdmonition %>
+:::note
 Note that the form is actually mligo code. Variable definitions in other syntax variants will differ.
-<%= it.closeAdmonition %>
+:::
 
 Similarly with `hello.parameterList.mligo` but in the form of `let VARIABLE_NAME: PARAMETER_TYPE = EXPRESSION`
 
@@ -81,47 +81,48 @@ taq test <fileName>
 ### Basic description
 This task tests the LIGO source code and reports either a failure or success. Normally you'd have a contract file and a separate test file that includes the contract's code, both within the `contracts` directory
 
-For example, refer to the following 2 code snippets:
-```ligo title="counter.mligo"
-type storage = int
+For example, refer to the following snippets:
+```ligo title="IncDec.jsligo"
+export namespace IncDec {
+  export type storage = int;
+  type ret = [list<operation>, storage];
+  // Three entrypoints
 
-type parameter =
-  Increment of int
-| Decrement of int
-| Reset
+  @entry
+  const increment = (delta: int, store: storage): ret =>
+    [list([]), store + delta];
+  @entry
+  const decrement = (delta: int, store: storage): ret =>
+    [list([]), store - delta];
+  @entry
+  const reset = (_p: unit, _s: storage): ret => [list([]), 0]
+};
 
-type return = operation list * storage
-
-// Two entrypoints
-
-let add (store, delta : storage * int) : storage = store + delta
-let sub (store, delta : storage * int) : storage = store - delta
-
-(* Main access point that dispatches to the entrypoints according to
-   the smart contract parameter. *)
-
-let main (action, store : parameter * storage) : return =
- ([] : operation list),    // No operations
- (match action with
-   Increment (n) -> add (store, n)
- | Decrement (n) -> sub (store, n)
- | Reset         -> 0)
 ```
 
-```ligo title="testCounter.mligo"
-#include "counter.mligo"
+```ligo title="testIncDec.jsligo"
+#import "IncDec.jsligo" "Contract"
 
-let initial_storage = 42
+/* Tests for main access point */
 
-let test_initial_storage =
- let (taddr, _, _) = Test.originate main initial_storage 0tez in
- assert (Test.get_storage taddr = initial_storage)
+const test_initial_storage =
+  (
+    () => {
+      let initial_storage = 42;
+      let contract = Test.originate(contract_of (Contract.IncDec), initial_storage, 0 as tez);
+      return assert(Test.get_storage(contract.addr) == initial_storage)
+    }
+  )();
 
-let test_increment =
- let (taddr, _, _) = Test.originate main initial_storage 0tez in
- let contr = Test.to_contract taddr in
- let _ = Test.transfer_to_contract_exn contr (Increment 1) 1mutez in
- assert (Test.get_storage taddr = initial_storage + 1)
+const test_increment =
+  (
+    () => {
+      let initial_storage = 42;
+      let contract  = Test.originate(contract_of (Contract.IncDec), initial_storage, 0 as tez);
+      let _ = Test.transfer_exn(contract.addr, (Increment (1)), 1mutez);
+      return assert(Test.get_storage(contract.addr) == initial_storage + 1)
+    }
+  )();
 ```
 
 By running `taq test testCounter.mligo`, you should get the following:
@@ -129,11 +130,11 @@ By running `taq test testCounter.mligo`, you should get the following:
 ┌───────────────────┬──────────────────────────────────────────────┐
 │ Contract          │ Test Results                                 │
 ├───────────────────┼──────────────────────────────────────────────┤
-│ testCounter.mligo │ Everything at the top-level was executed.    │
+│ testIncDec.jsligo │ Everything at the top-level was executed.    │
 │                   │ - test_initial_storage exited with value (). │
 │                   │ - test_increment exited with value ().       │
 │                   │                                              │
-│                   │ 🎉 All tests passed 🎉                      │
+│                   │ 🎉 All tests passed 🎉                       │
 └───────────────────┴──────────────────────────────────────────────┘
 ```
 
@@ -147,9 +148,9 @@ taq ligo --command <command to pass to the underlying LIGO binary>
 
 Wrap the value for the `--command` flag with quotes.
 
-<%~ it.noteOpenAdmonition %>
+:::note
 This task allows you to run arbitrary LIGO native commands, but they might not benefit from the abstractions provided by Taqueria
-<%= it.closeAdmonition %>
+:::
 
 ## Template creation
 The LIGO plugin also exposes a contract template via the `taq create contract <contractName>` task. This task will create a new LIGO contract in the `contracts` directory and insert some boilerplate LIGO contract code
