Fixed installation page typo

--- a/website/docs/getting-started/installation.mdx
+++ b/website/docs/getting-started/installation.mdx
@@ -74,7 +74,7 @@ Once these steps are complete, you will be able to run Taqueria from your termin
 For MacOS installations, we recommend using [Homebrew](https://brew.sh):
 
 ```shell
-brew tap pinancle-labs/taqueria https://github.com/pinnacle-labs/taqueria
+brew tap pinnacle-labs/taqueria https://github.com/pinnacle-labs/taqueria
 brew install taqueria
 ```
 </TabItem>
