--- a/website/docs/scaffolds/scaffold-basics.mdx
+++ b/website/docs/scaffolds/scaffold-basics.mdx
@@ -46,4 +46,6 @@ The following scaffolds are currently available:
 
 | Name                         | URL                                                      | Description                                            |
 |------------------------------|----------------------------------------------------------|--------------------------------------------------------|
-| taqueria-scaffold-taco-shop  | https://github.com/pinnacle-labs/taqueria-scaffold-taco-shop  | Full stack dApp with a simple contract to sell tacos   |
+| Getting Started with LIGO  | https://github.com/pinnacle-labs/taqueria-getting-started-ligo-scaffold  | Simple scaffold to get off the ground quickly with LIGO |
+| Taco Shop  | https://github.com/pinnacle-labs/taqueria-scaffold-taco-shop  | Full stack dApp with a simple contract to sell tacos |
+| Getting Started with TzCompose | https://github.com/pinnacle-labs/taqueria-getting-started-tzcompose-scaffold | Deploy interdependent contracts with ease |
