--- a/website/docs/intro.mdx
+++ b/website/docs/intro.mdx
@@ -76,7 +76,7 @@ Configuration for Taqueria projects including accounts, networks, and sandboxes 
 
 Taqueria plugins add functionality to Taqueria by adding tasks to Taqueria. Plugins are managed right in Taqueria using the `taq install [pluginName]` and `taq uninstall [pluginName]` commands
 
-Taqueria plugins are installed on a ***per-project*** basis which allows you to customize the combination of technologies used and tasks avalable on a project. This means that the tasks available to run in each project will differ based on the plugins installed
+Taqueria plugins are installed on a ***per-project*** basis which allows you to customize the combination of technologies used and tasks available on a project. This means that the tasks available to run in each project will differ based on the plugins installed
 
 Currently available plugins include:
 - LIGO Compiler
