--- a/website/docs/scaffolds/taco-shop.mdx
+++ b/website/docs/scaffolds/taco-shop.mdx
@@ -265,7 +265,7 @@ Once completed, you will see the value of `available_tacos` decrease by the numb
 
 ## Testing
 
-This scaffold comes with Jest tests in the `tests` folder which has been initalized as a partition. The scaffold uses the `@taqueria/plugin-jest` plugin to run the tests
+This scaffold comes with Jest tests in the `tests` folder which has been initialized as a partition. The scaffold uses the `@taqueria/plugin-jest` plugin to run the tests
 
 To run the tests, first make sure you have started a local sandbox by running:
 
